--- a/index.html
+++ b/index.html
@@ -3,6 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.css"
+      integrity="sha512-gA2Bvu0/hw4oj0Lp8ZHjK+o3S4BE5m8d/wNVy6ktKLhHKPpWLQwv9ixzuWirWOakoJqlBdePq2NhoCaUOQ5npQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Document</title>
   </head>
   <body>
@@ -11,102 +32,151 @@
         ><img src="./images/Vectorlogo.svg" alt="logo" width="66" height="52"
       /></a>
       <nav>
-        <ul>
-          <li><a href=""></a>Home</li>
-          <li><a href=""></a>About</li>
-          <li><a href=""></a>Service</li>
-          <li><a href=""></a>Menu</li>
-          <li><a href=""></a>Contact</li>
+        <ul class="list-nav">
+          <li class="item-link-home"><a href="./index.html"></a>Home</li>
+          <li class="item-link-nav"><a href=""></a>About</li>
+          <li class="item-link-nav"><a href=""></a>Service</li>
+          <li class="item-link-nav"><a href=""></a>Menu</li>
+          <li class="item-link-nav"><a href=""></a>Contact</li>
         </ul>
       </nav>
-      <button type="button">Order Now</button>
+      <button class="button-nav" type="button">Order Now</button>
     </header>
     <main>
+      <!-- sectin one -->
+
       <section>
-        <h1>Enjoy Your Favorite Food From Anywhere</h1>
-        <p>
+        <h1 class="title-section-one">
+          Enjoy Your Favorite Food From Anywhere
+        </h1>
+        <p class="paragraph-section-one">
           With just a few clicks, you can have your favorite meals delivered
           straight to your doorstep, no matter where you are. Order now and
           enjoy a hassle-free and delicious meal from the comfort of your own
           home.
         </p>
-        <button type="button">Order Now</button>
+        <button class="button-section-one" type="button">Order Now</button>
         <img src="./images/salad.jpg" alt="salad" width="520" height="528" />
       </section>
+
+      <!-- section two -->
+
       <section>
         <img src="./images/aple-min.png" alt="apple" width="396" height="502" />
-        <h2>What’s Special About Our Offerings</h2>
-        <p>
+        <h2 class="title-section-two">What’s Special About Our Offerings</h2>
+        <p class="paragraph-section-two">
           With our platform, you can browse through a diverse selection of
           cuisines and local restaurants, and choose from a variety of dishes
           that cater to your specific taste buds.
         </p>
-        <ul>
-          <li>
-            <h3>Fasest Delivery</h3>
-            <p>
+        <ul class="list-section-two">
+          <li class="item-section-two">
+            <h3 class="title-item-section-two">Fasest Delivery</h3>
+            <p class="paragraph-title-section-two">
               Our advanced logistics system and dedicated delivery partners
               ensure that your meals are delivered to you within 30-minutes.
             </p>
           </li>
-          <li>
-            <h3>Easy To Order</h3>
-            <p>
+          <li class="item-section-two">
+            <h3 class="title-item-section-two">Easy To Order</h3>
+            <p class="paragraph-title-section-two">
               You can browse through a wide variety of cuisines and restaurants,
               select your favorite meals, and place your order in just a few
               clicks.
             </p>
           </li>
         </ul>
-        <button type="button">Order Now</button>
+        <button class="button-section-two" type="button">Order Now</button>
       </section>
+      <!-- section 3 -->
       <section>
-        <h2>Some of Our Favorites</h2>
-        <p>Looking for something delicious?</p>
-        <ul>
-          <li>
+        <h2 class="title-section-three">Some of Our Favorites</h2>
+        <p class="paragraph-section-three">Looking for something delicious?</p>
+        <ul class="list-section-three">
+          <li class="item-images-section-three">
             <img src="./images/gamburger-min.png" alt="gamburger" width="315" />
           </li>
-          <li><img src="./images/Pasta-min.png" alt="pasta" width="315" /></li>
-          <li><img src="./images/pizza-min.png" alt="pizza" width="315" /></li>
-          <li>
+          <li class="item-images-section-three">
+            <img src="./images/Pasta-min.png" alt="pasta" width="315" />
+          </li>
+          <li class="item-images-section-three">
+            <img src="./images/pizza-min.png" alt="pizza" width="315" />
+          </li>
+          <li class="item-images-section-three">
             <img src="./images/chicken-min.png" alt="chiken" width="315" />
           </li>
-          <li><img src="./images/salat-min.png" alt="salat" width="315" /></li>
-          <li>
+          <li class="item-images-section-three">
+            <img src="./images/salat-min.png" alt="salat" width="315" />
+          </li>
+          <li class="item-images-section-three">
             <img src="./images/borshch-min.png" alt="borshch" width="315" />
           </li>
         </ul>
       </section>
       <section>
-        <h2>What our Customers Say</h2>
-        <p>
+        <h2 class="title-section-four">What our Customers Say</h2>
+        <p class="paragraph-section-four">
           Don't just take our word for it - see what our satisfied customers
           have to say
         </p>
-        <ul>
-          <li>
-            <p>
+        <ul class="list-section-four">
+          <li class="item-section-four">
+            <img src="./images/Stars.svg" alt="stars" />
+            <p class="paragraph-item-section-four">
               “The Best app I have used to order food in a while, so many
               options to choose from too, I would recommend to a freind, No
               questions asked”
             </p>
             <img src="./images/Ellipse9-min.png" alt="man" width="48" />
-            <h3>Sumith Shah</h3>
-            <p>Some Dude</p>
+            <h3 class="title-name">Sumith Shah</h3>
+            <p class="coment">Some Dude</p>
           </li>
-          <li>
-            <p>
+          <li class="item-section-four">
+            <img src="./images/Stars.svg" alt="stars" />
+            <p class="paragraph-item-section-four">
               “The ease with which I can just go in and order what i want was
               amazing, It has been a very pleasant experience ordering from this
               app”
             </p>
             <img src="./images/Ellipse10-min.png" alt="women" width="48" />
-            <h3>Sumith Shah</h3>
-            <p>Some Dude</p>
+            <h3 class="title-name">Sumith Shah</h3>
+            <p class="coment">Some Dude</p>
           </li>
         </ul>
       </section>
+      <!-- section banana -->
+      <section>
+        <h3>Subscribe To Get Special Offers</h3>
+        <p>
+          Order now and receive 10% off your first meal with Enjoy Your Favorite
+          Food From Anywhere.
+        </p>
+
+        <button type="button">Subscribe</button>
+        <img src="./images/banan-min.png" alt="banan" />
+      </section>
+      <footer>
+        <img src="./images/Vectorlogo.svg" alt="logo" />
+        <ul class="list-nav">
+          <li class="item-link-nav"><a href="./index.html"></a>Home</li>
+          <li class="item-link-nav"><a href=""></a>About</li>
+          <li class="item-link-nav"><a href=""></a>Service</li>
+          <li class="item-link-nav"><a href=""></a>Menu</li>
+          <li class="item-link-nav"><a href=""></a>Contact</li>
+        </ul>
+        <ul class="list-footer-privacy">
+          <li><a href=""></a>Privacy Policy</li>
+          <li><a href=""></a>Terms of Service</li>
+          <li><a href=""></a>Cookies Settings</li>
+        </ul>
+        <h3 class="title-subscribe">Subscribe</h3>
+        <p class="paragraf-policy">
+          By subscribing you agree to with our
+          <a class="list-footer-privacy" href="">Privacy Policy</a>
+        </p>
+        <button class="button-footer" type="button">Subscribe</button>
+        <p class="end-paragraph">2022 FoodSta. All right reserved.</p>
+      </footer>
     </main>
   </body>
 </html>
