--- a/index.html
+++ b/index.html
@@ -145,15 +145,25 @@
         </ul>
       </section>
       <!-- section banana -->
-      <section>
-        <h3>Subscribe To Get Special Offers</h3>
-        <p>
-          Order now and receive 10% off your first meal with Enjoy Your Favorite
-          Food From Anywhere.
-        </p>
-
-        <button type="button">Subscribe</button>
-        <img src="./images/banan-min.png" alt="banan" />
+      <section class="section-subscribe">
+        <div class="container all-contant-section">
+          <div class="container-content-subscribe">
+            <h3 class="title-subscribe-one">Subscribe To Get Special Offers</h3>
+            <p class="paragraph-subscribe">
+              Order now and receive 10% off your first meal with Enjoy Your
+              Favorite Food From Anywhere.
+            </p>
+            <button class="button-sub" type="button">Subscribe</button>
+          </div>
+          <div class="container-subscribe-image">
+            <img
+              class="subscribe-image"
+              src="./images/banan-min.png"
+              alt="banan"
+              width="608"
+            />
+          </div>
+        </div>
       </section>
       <footer>
         <img src="./images/Vectorlogo.svg" alt="logo" />
