--- a/index.html
+++ b/index.html
@@ -153,7 +153,20 @@
               Order now and receive 10% off your first meal with Enjoy Your
               Favorite Food From Anywhere.
             </p>
-            <button class="button-sub" type="button">Subscribe</button>
+     <form class="form" name="issue_report_form" autocomplete="off"></form>
+      <label class="form-label">
+
+    <input
+      class="form-input"
+      type="text"
+      name="topic"
+      placeholder="Short issue summary"
+    />
+  </label>
+
+ <button class="button-sub" type="button">Subscribe</button>
+</form>
+            
           </div>
           <div class="container-subscribe-image">
             <img
